fix: Fixed image align

--- a/src/components/RichText/style.scss
+++ b/src/components/RichText/style.scss
@@ -7,6 +7,7 @@
 .imageWrapper {
   margin-top   : 4px;
   margin-bottom: 4px;
+  text-align   : center;
 }
 
 .image {
